--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-dobartek-down",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Check if dobartek.hr is down",
 	"license": "MIT",
 	"repository": "mmarinovic/is-dobartek-down",
@@ -9,6 +9,9 @@
 		"email": "marinovic.marko@outlook.com",
 		"url": "https://markomarinovic.com"
 	},
+	"keywords": [
+		"dobartek"
+	],
 	"bin": "cli.js",
 	"files": [
 		"cli.js"
